@@ -1,3 +1,27 @@
-file /usr/local/lib/python2.7/dist-packages/eiffel_loop/scons/eiffel.py,line 53:
+file C:\Program Files\Python27\lib\site-packages\eiffel_loop\scons\eiffel.py,line 53:
 	Configure(confdir = .sconf_temp)
+scons: Configure: Checking for C library IPHlpApi... 
+scons: Configure: ".sconf_temp\conftest_0.c" is up to date.
+scons: Configure: The original builder output was:
+  |.sconf_temp\conftest_0.c <-
+  |  |
+  |  |
+  |  |
+  |  |int
+  |  |main() {
+  |  |  
+  |  |return 0;
+  |  |}
+  |  |
+  |
+scons: Configure: ".sconf_temp\conftest_0.obj" is up to date.
+scons: Configure: The original builder output was:
+  |cl /Fo.sconf_temp\conftest_0.obj /c .sconf_temp\conftest_0.c /nologo
+  |
+scons: Configure: ".sconf_temp\conftest_0.exe" is up to date.
+scons: Configure: The original builder output was:
+  |link /nologo /OUT:.sconf_temp\conftest_0.exe IPHlpApi.lib .sconf_temp\conftest_0.obj
+  |
+scons: Configure: (cached) yes
+
 
