@@ -16,10 +16,10 @@ Eiffel Development Utilities
 
 See doc/eiffel-utility.txt for details.
 	</description>
-	<!--&quot;Swiss army knife&quot; toolkit containing a suite of command line tools for Eiffel development-->
+	<!--"Swiss army knife" toolkit containing a suite of command line tools for Eiffel development-->
 	<target name = "classic">
 		<root class = "APPLICATION_ROOT" feature = "make"/>
-		<version major = "1" minor = "0" release = "36" build = "164" company = "Eiffel-Loop" product = "eiffel" copyright = "Finnian Reilly"/>
+		<version major = "1" minor = "0" release = "36" build = "165" company = "Eiffel-Loop" product = "eiffel" copyright = "Finnian Reilly"/>
 		<variable name = "build_info_dir" value = "source/root"/>
 		<option syntax = "standard" full_class_checking = "false" void_safety = "none" trace = "false" debug = "false" warning = "true">
 			<assertions precondition = "true" postcondition = "true" check = "true" invariant = "false"/>
@@ -69,7 +69,7 @@ See doc/eiffel-utility.txt for details.
 			<description>
 Eiffel Development Utilities
 
-A &quot;Swiss-army knife&quot; of Eiffel development utilities invokeable by a command-line switch.
+A "Swiss-army knife" of Eiffel development utilities invokeable by a command-line switch.
 
 See doc/eiffel.root.txt for details.
 			</description>
@@ -78,7 +78,7 @@ See doc/eiffel.root.txt for details.
 			<description>
 Eiffel Class Editing Utilities
 
-A &quot;Swiss-army knife&quot; of Eiffel class editing utilities invokeable by a command-line switch.
+A "Swiss-army knife" of Eiffel class editing utilities invokeable by a command-line switch.
 
 See doc/eiffel.edit.txt for details.
 			</description>
@@ -87,7 +87,7 @@ See doc/eiffel.edit.txt for details.
 			<description>
 Eiffel Class Analysis Utilities
 
-A &quot;Swiss-army knife&quot; of Eiffel class analysis utilities invokeable by a command-line switch.
+A "Swiss-army knife" of Eiffel class analysis utilities invokeable by a command-line switch.
 
 See doc/eiffel.analyse.txt for details.
 			</description>
