@@ -7,7 +7,7 @@ note
 	contact: "finnian at eiffel hyphen loop dot com"
 
 	license: "MIT license (See: en.wikipedia.org/wiki/MIT_License)"
-	date: "2019-12-08 11:40:11 GMT (Sunday 8th December 2019)"
+	date: "2019-12-13 11:55:43 GMT (Friday 13th December 2019)"
 	revision: "1"
 
 class
@@ -20,7 +20,7 @@ feature -- Constants
 
 	Version_number: NATURAL = 01_00_36
 
-	Build_number: NATURAL = 163
+	Build_number: NATURAL = 164
 
 	Installation_sub_directory: EL_DIR_PATH
 		once
