@@ -7,7 +7,7 @@ note
 	contact: "finnian at eiffel hyphen loop dot com"
 
 	license: "MIT license (See: en.wikipedia.org/wiki/MIT_License)"
-	date: "2019-11-25 12:20:47 GMT (Monday 25th November 2019)"
+	date: "2019-12-13 12:08:43 GMT (Friday 13th December 2019)"
 	revision: "1"
 
 class
@@ -18,9 +18,9 @@ inherit
 
 feature -- Constants
 
-	Version_number: NATURAL = 01_02_24
+	Version_number: NATURAL = 01_02_25
 
-	Build_number: NATURAL = 497
+	Build_number: NATURAL = 500
 
 	Installation_sub_directory: EL_DIR_PATH
 		once
