@@ -14,14 +14,14 @@
 	<description>
 Utilities Toolkit
 
-A &quot;Swiss-army knife&quot; of command line utilities accessible via a command line option.
+A "Swiss-army knife" of command line utilities accessible via a command line option.
 
 See doc/toolkit.txt for details.
 	</description>
-	<!--&quot;Swiss army knife&quot; toolkit containing a suite of command line tools for Eiffel development-->
+	<!--"Swiss army knife" toolkit containing a suite of command line tools for Eiffel development-->
 	<target name = "classic">
 		<root class = "APPLICATION_ROOT" feature = "make"/>
-		<version major = "1" minor = "2" release = "25" build = "498" company = "Eiffel-Loop" product = "toolkit" copyright = "Finnian Reilly"/>
+		<version major = "1" minor = "2" release = "25" build = "501" company = "Eiffel-Loop" product = "toolkit" copyright = "Finnian Reilly"/>
 		<option syntax = "standard" full_class_checking = "false" void_safety = "none" trace = "false" debug = "false" warning = "true">
 			<debug name = "pyxis" enabled = "false"/>
 			<assertions precondition = "true" postcondition = "true" check = "true" invariant = "false"/>
