@@ -58,3 +58,6 @@ Python classes using new XPATH_CONTEXT facilities
 Fri 29th Nov 2019, 15:21:27
 Tested EL_DEBIAN_MAKE_SCRIPT
 
+Thu 12th Dec 2019, 12:32:09
+Diagnosed segmentation fault when calling {FCGI_HEADER_RECORD}.record_type
+
